Compiler/tests/bad/for2.nx
type t = [0 .. 10];

for(int x : t = 3; t ; x + 2)
{   
    print(i);
}
